# gopher-cta

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  NIGHT-LOG.md  README.md  caps.txt  chicago_geo.json  docker-compose.yml  nohup.out  robots.txt
.github/workflows/: ci.yml
deploy/: Dockerfile.geomyidae  Dockerfile.visitors  gopher-cta.yaml  grafana-visitors-dashboard-configmap.yaml  grafana-visitors-dashboard.json  logrotate.gopher  visitors-cronjob.yaml
docs/: ARCHITECTURE.md  DEPLOY.md  VISITORS.md
fixtures/: positions.json
scripts/: Dockerfile.ppc64  README.md  build-ppc64.sh  gopher-visitors.py  visitors-batch.sh  visitors-remote.sh  visitors-to-loki.py  visitors-to-loki.sh
src/: atlas.rs  braille.rs  fetch.rs  main.rs  narration.rs  project.rs  protocol.rs  render.rs  server.rs  transit.rs
